--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=3000
 privateKey='amine'
 SERVER=127.0.0.1
 
-DB_SERVER=localhost
+DB_SERVER=mongo
 DB_PORT=27017
 GOOGLE_USER=bellarej.amine2@gmail.com
 GOOGLE_PASS=aminebr01
