--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /backend/node_modules
 /backend/package-lock.json
 /backend/uploads/*
-/backend.env
+/backend/.env
 /backend/access.log
 /backend/env.list.mongo
 /frontend/node_modules
+/frontend/documentation
+
