--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     restart: always
     build: ./backend
     ports:
-      - "3001:3001"
+      - "3000:3000"
     volumes:
       - ./backend/models:/app/models
       - ./backend/middlewares:/app/middlewares
       - ./backend/controllers:/app/controllers
     links:
       - mongo
-      - front
     env_file:
      - ./backend/.env
     depends_on:
@@ -25,11 +24,22 @@ services:
       - "27017:27017"
     volumes:
       - datavolume_sopptas:/data/db
+      
+
   front:
     container_name: frontend-angular
     build: ./frontend
     ports:
       - "80:80"
       - "443:443"
+ 
+  db-fixture:
+    build: ./backend/db-fixture
+    container_name: db-fixture
+    links:
+      - mongo
+    depends_on:
+      - mongo
+
 volumes:
   datavolume_sopptas:
