--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
