--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -25,12 +25,12 @@ jobs:
       run: |
           touch .env
           echo PORT=3000 >> .env
-          echo SERVER=0.0.0.0 >> .env
+          echo SERVER=localhost >> .env
           echo GOOGLE_USER=${{ secrets.GOOGLE_USER }} >> .env
           echo GOOGLE_PASS=${{ secrets.GOOGLE_PASS }} >> .env
-          echo DB_SERVER=0.0.0.0 >> .env
+          echo DB_SERVER=localhost >> .env
           echo DB_PORT=27017 >> .env
-          echo secretKey=${{ secrets.SECRET_KEY }} >> .env
+          echo privateKey=${{ secrets.SECRET_KEY }} >> .env
           cat .env   
           
     - name: Start Docker for Mongodb
