--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: 12.x
     
     - name: Create env file
+      working-directory: ./backend
       run: |
           touch .env
           echo PORT=3000 >> .env
