--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -50,7 +50,7 @@ jobs:
         npm test
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Remove old containers
         run: |
