--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,7 +17,14 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+
+        location ^~ /api/ {
+        proxy_pass http://0.0.0.0:3000/;
+        }
+        
     }
+   
+    
 }
 
 events {
