--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -74,6 +74,8 @@ jobs:
       - name: run docker compose
         run: docker-compose up --build -d  
       - name: seed db
-        run: mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
+        run: |
+          apt install mongodb-org
+          mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
         env:
           CD: true
