--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -75,7 +75,7 @@ jobs:
         run: docker-compose up --build -d  
       - name: seed db
         run: |
-          apt install mongodb-org
+          sudo apt install mongodb-org
           mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
         env:
           CD: true
