--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -73,7 +73,7 @@ jobs:
         run: cp .env ./backend
       - name: run docker compose
         run: docker-compose up --build -d  
-      - name: seed db
-        run: mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
+      #- name: seed db
+      #  run: mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
         env:
           CD: true
