--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=3000
 privateKey='amine'
 SERVER=0.0.0.0
 
-DB_SERVER=mongo
+DB_SERVER=0.0.0.0
 DB_PORT=27017
 GOOGLE_USER=bellarej.amine2@gmail.com
 GOOGLE_PASS=aminebr01
