--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,7 +18,7 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location ^~ /api/ {
+        location ~ \.api$ {
         proxy_pass http://0.0.0.0:3000/;
         }
         
