--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -74,12 +74,7 @@ jobs:
       - name: run docker compose
         run: docker-compose up --build -d  
 
-      - name: Sleep for 10 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '10s'  
-
-      - name: seed db
+      - name: Sleep for 20 seconds and seed db
         run: |
           sleep 20
           mongorestore --host 0.0.0.0 --db sopptas ./backend/db-fixture/dump/sopptas
