--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,9 @@
 worker_processes  1;
 
 http {
+    upstream backend {
+         server app:3000; #you container/service name
+    }
     server {
         listen 80;
         server_name  localhost;
@@ -13,15 +16,15 @@ http {
         gzip_min_length 1000;
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
+       
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        location ~ \.api$ {
-        proxy_pass http://0.0.0.0:3000/;
+        location ^~ /api/ {
+        proxy_pass http://backend;
         }
-        
+
     }
    
     
