remove env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,9 @@
-NODE_ENV=development
+NODE_ENV=
 PORT=3000
-privateKey=
-SERVER=localhost
-GOOGLE_USER=
-GOOGLE_PASS=
+privateKey='amine'
+SERVER=0.0.0.0
+
+DB_SERVER=0.0.0.0
+DB_PORT=27017
+GOOGLE_USER=bellarej.amine2@gmail.com
+GOOGLE_PASS=aminebr01
