--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angularCrash": {
+    "soptass": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angularCrash",
+            "outputPath": "dist/soptass",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angularCrash:build"
+            "browserTarget": "soptass:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angularCrash:build:production"
+              "browserTarget": "soptass:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angularCrash:build"
+            "browserTarget": "soptass:build"
           }
         },
         "test": {
@@ -118,18 +118,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angularCrash:serve"
+            "devServerTarget": "soptass:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angularCrash:serve:production"
+              "devServerTarget": "soptass:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angularCrash",
+  "defaultProject": "soptass",
   "cli": {
     "analytics": false
   }
