--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,6 +25,12 @@ http {
              proxy_pass http://backend;
         }
 
+
+        location ^~ /images/ {
+             proxy_pass http://backend;
+        }
+
+
     }
    
     
