FEATURE-crude-zones-cat-users

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,7 @@
 NODE_ENV=
 PORT=3000
-privateKey='amine'
-SERVER=0.0.0.0
+privateKey='seif'
+SERVER=localhost
 
-DB_SERVER=mongo
+DB_SERVER=localhost
 DB_PORT=27017
-GOOGLE_USER=bellarej.amine2@gmail.com
-GOOGLE_PASS=aminebr01
