FEATURE-firebase-fix-password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./backend/models:/app/models
       - ./backend/middlewares:/app/middlewares
       - ./backend/controllers:/app/controllers
+      # - storage:/app/uploads
     links:
       - mongo
     env_file:
@@ -45,3 +46,5 @@ services:
 
 volumes:
   datavolume_sopptas:
+  # storage:
+  #   external: true
