--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.6.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
